force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Stores contact address information.</description>
    <label>Address</label>
    <nameField>
        <label>Address Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>