force-app/main/default/objects/Address__c/fields/Address_Override__c.field-meta.xml
<CustomField>
    <fullName>Address_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not attempt Address Standardization</label>
    <type>Checkbox</type>
</CustomField>