force-app/main/default/objects/Address__c/fields/Congressional_District_Number__c.field-meta.xml
<CustomField>
    <fullName>Congressional_District_Number__c</fullName>
    <description>Congressional district.</description>
    <inlineHelpText>Enter your 2-character congressional district number.</inlineHelpText>
    <label>Congressional District Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>