force-app/main/default/objects/Address__c/fields/Contact_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Integration_Status__c</fullName>
    <formula>Text(Contact__r.Integration_Status__c)</formula>
    <label>Contact Integration Status</label>
    <type>Text</type>
</CustomField>