force-app/main/default/objects/Address__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Geographic county.</description>
    <inlineHelpText>If known, enter the county of your address.</inlineHelpText>
    <label>County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>