force-app/main/default/objects/Address__c/fields/Konnex_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Konnex_Address_Id__c</fullName>
    <description>External ID for Konnex.</description>
    <inlineHelpText>Volunteer&#39;s Address ID from Konnex.</inlineHelpText>
    <label>Konnex_Address_Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>