force-app/main/default/objects/Address__c/fields/Konnex_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Konnex_Person_ID__c</fullName>
    <description>Formula to get Contact Konnex Person ID</description>
    <formula>Contact__r.Konnex_Person_ID__c</formula>
    <inlineHelpText>Contact Konnex Person ID</inlineHelpText>
    <label>Konnex Person ID</label>
    <type>Text</type>
</CustomField>