force-app/main/default/objects/Address__c/fields/Mailing_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Country__c</fullName>
    <description>This is for information use only for the Purpose Prize Program and will not sync with Konnex.</description>
    <label>Mailing Address Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan 93</fullName>
            </value>
            <value>
                <fullName>Albania 355</fullName>
            </value>
            <value>
                <fullName>Algeria 213</fullName>
            </value>
            <value>
                <fullName>American Samoa 1-684</fullName>
            </value>
            <value>
                <fullName>Andorra 376</fullName>
            </value>
            <value>
                <fullName>Angola 244</fullName>
            </value>
            <value>
                <fullName>Anguilla 1-264</fullName>
            </value>
            <value>
                <fullName>Antarctica 672</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda 1-268</fullName>
            </value>
            <value>
                <fullName>Argentina 54</fullName>
            </value>
            <value>
                <fullName>Armenia 374</fullName>
            </value>
            <value>
                <fullName>Aruba 297</fullName>
            </value>
            <value>
                <fullName>Australia 61</fullName>
            </value>
            <value>
                <fullName>Austria 43</fullName>
            </value>
            <value>
                <fullName>Azerbaijan 994</fullName>
            </value>
            <value>
                <fullName>Bahamas 1-242</fullName>
            </value>
            <value>
                <fullName>Bahrain 973</fullName>
            </value>
            <value>
                <fullName>Bangladesh 880</fullName>
            </value>
            <value>
                <fullName>Barbados 1-246</fullName>
            </value>
            <value>
                <fullName>Belarus 375</fullName>
            </value>
            <value>
                <fullName>Belgium 32</fullName>
            </value>
            <value>
                <fullName>Belize 501</fullName>
            </value>
            <value>
                <fullName>Benin 229</fullName>
            </value>
            <value>
                <fullName>Bermuda 1-441</fullName>
            </value>
            <value>
                <fullName>Bhutan 975</fullName>
            </value>
            <value>
                <fullName>Bolivia 591</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina 387</fullName>
            </value>
            <value>
                <fullName>Botswana 267</fullName>
            </value>
            <value>
                <fullName>Brazil 55</fullName>
            </value>
            <value>
                <fullName>British Indian Ocean Territory 246</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>