force-app/main/default/objects/Address__c/fields/Outbound_Sync_Retry__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Sync_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound Sync Retry</label>
    <type>Checkbox</type>
</CustomField>