force-app/main/default/objects/Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Address postal code.</description>
    <label>Postal Code</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>