force-app/main/default/objects/Address__c/fields/Seasonal_Address_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Address_Start_Date__c</fullName>
    <description>Effective start date for seasonal address type.</description>
    <inlineHelpText>This field to be used only when &quot;Seasonal&quot; address type is selected.  Enter the effective start date for your seasonal address.</inlineHelpText>
    <label>Seasonal Address Start Date</label>
    <type>Date</type>
</CustomField>