force-app/main/default/objects/Address__c/fields/Standardization_State__c.field-meta.xml
<CustomField>
    <fullName>Standardization_State__c</fullName>
    <description>Field is used for standardization process.  All profiles should have read and edit access, but the field should only be on the system administrator layout; users should not actually see the field.</description>
    <label>Standardization State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Standardized</fullName>
                <default>true</default>
                <label>Not Standardized</label>
            </value>
            <value>
                <fullName>Standardized</fullName>
            </value>
            <value>
                <fullName>Migrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>