force-app/main/default/objects/Address__c/fields/State_Lower_House_District_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Lower_House_District_Number__c</fullName>
    <description>State lower house district number.</description>
    <inlineHelpText>Enter your 3-character lower house district number.</inlineHelpText>
    <label>State Lower House District Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>