force-app/main/default/objects/Address__c/fields/State_Upper_House_District_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Upper_House_District_Number__c</fullName>
    <description>State upper house district number.</description>
    <inlineHelpText>Enter your 3-character state upper house district number.</inlineHelpText>
    <label>State Upper House District Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>