force-app/main/default/objects/Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Address type for selected address.</description>
    <inlineHelpText>Select the type of address you wish to enter.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>