force-app/main/default/objects/Address__c/fields/Update_Person_Address_Error__c.field-meta.xml
<CustomField>
    <fullName>Update_Person_Address_Error__c</fullName>
    <description>To store the exception message from Update Person service when updating the Address to Konnex.</description>
    <label>Update Person Address Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>