force-app/main/default/objects/Address__c/fields/Update_Source__c.field-meta.xml
<CustomField>
    <fullName>Update_Source__c</fullName>
    <description>This field is used to restrict address standardization for data load activities.</description>
    <label>Update Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>