force-app/main/default/objects/Address__c/validationRules/Address_Line_1_Character_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Line_1_Character_Limit</fullName>
    <active>true</active>
    <description>Limits the Line Address 1 field to 40 character limit. This limit is required for external system standardization process.</description>
    <errorConditionFormula>LEN(Name) &gt; 41</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Address Line 1 cannot exceed 40 characters.</errorMessage>
</ValidationRule>