force-app/main/default/objects/Address__c/validationRules/Address_Line_Character_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Line_Character_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
NOT(REGEX(Name, &#39;^[^,\\%$*!&amp;]*$&#39;)),
NOT(REGEX(Address_Line_2__c, &#39;^[^,\\%$*!&amp;]*$&#39;)),
NOT(REGEX(Address_Line_3__c, &#39;^[^,\\%$*!&amp;]*$&#39;))

)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The following characters can not be used in Address Lines , \ % &amp; * !</errorMessage>
</ValidationRule>