force-app/main/default/objects/Address__c/validationRules/City_Special_Character_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Special_Character_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(City__c, &#39;^[^,\\%$*!.&amp;]*$&#39;))</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>City can not contain any of the following characters . , \ ^ % $ * ! &amp;</errorMessage>
</ValidationRule>