force-app/main/default/objects/Address__c/validationRules/Postal_Code_5_Or_9_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_5_Or_9_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Postal_Code__c,
&quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorDisplayField>Postal_Code__c</errorDisplayField>
    <errorMessage>Postal Code must be either 5 or 9 digits ##### or #####-####</errorMessage>
</ValidationRule>