force-app/main/default/objects/Address__c/validationRules/Seasonal_Address_Requires_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Seasonal_Address_Requires_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(
  ISPICKVAL(Type__c, &#39;Seasonal&#39;),
  OR(
    ISBLANK(Seasonal_Address_Start_Date__c),
    ISBLANK(Seasonal_Address_End_Date__c)
   )), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>A Seasonal Start Date and End Date are required when seasonal address type is chosen.</errorMessage>
</ValidationRule>