force-app/main/default/objects/Address__c/validationRules/Seasonal_Dates_for_Seasonal_Address_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Seasonal_Dates_for_Seasonal_Address_Only</fullName>
    <active>true</active>
    <description>This prevents Residential and Mailing addresses from having seasonal dates.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Type__c ,&quot;Residential&quot;),
ISPICKVAL( Type__c ,&quot;Mailing&quot;)
),
OR( 
NOT(ISBLANK(Seasonal_Address_Start_Date__c)),
NOT(ISBLANK(Seasonal_Address_End_Date__c))
)
)</errorConditionFormula>
    <errorMessage>Seasonal start and end dates are only available for seasonal address types.</errorMessage>
</ValidationRule>