force-app/main/default/objects/Address__c/validationRules/Seasonal_End_Date_Greater_Than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Seasonal_End_Date_Greater_Than_Start</fullName>
    <active>true</active>
    <description>Season_End_Date__c must be greater than TODAY.</description>
    <errorConditionFormula>Seasonal_Address_Start_Date__c &gt;= Seasonal_Address_End_Date__c</errorConditionFormula>
    <errorDisplayField>Seasonal_Address_End_Date__c</errorDisplayField>
    <errorMessage>Seasonal End Date must be later than the Seasonal Start Date.</errorMessage>
</ValidationRule>