force-app/main/default/objects/Address__c/validationRules/Volunteer_Leader_Read_Only_Cannot_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Volunteer_Leader_Read_Only_Cannot_Edit</fullName>
    <active>true</active>
    <description>Volunteer Leader - Read Only profiles cannot create or edit address records that aren&#39;t their own.</description>
    <errorConditionFormula>AND(
OR(
$Profile.Name = &quot;Chapters Volunteer Leader - Read Only - LMS Admin&quot;,
$Profile.Name = &quot;Driver Safety Volunteer Leader - Read Only - LMS Admin&quot;,
$Profile.Name = &quot;Experience Corps Volunteer Leader - Read Only - LMS Admin&quot;,
$Profile.Name = &quot;States Volunteer Leader - Read Only - LMS Admin&quot;,
$Profile.Name = &quot;Tax-Aide Volunteer Leader - Read Only - LMS Admin&quot;,
$Profile.Name = &quot;Life Reimagined Volunteer Leader - Read Only - LMS Admin&quot;),
$User.ContactId &lt;&gt;   Contact__r.Id )</errorConditionFormula>
    <errorMessage>You do not have access to edit this address record. Please contact your system administrator for assistance.</errorMessage>
</ValidationRule>