force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_Line_2__c</columns>
    <columns>City__c</columns>
    <columns>State_Territory__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>